possible testlens fix for JDK25